--- a/styles/global.css
+++ b/styles/global.css
@@ -14,17 +14,7 @@
  * limitations under the License.
  */
 
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  font-display: optional;
-  src: url(https://assets.vercel.com/raw/upload/v1587415301/fonts/2/inter-var-latin.woff2)
-    format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;900&display=swap');
 
 @tailwind components;
 @tailwind utilities;
@@ -59,17 +49,16 @@
   --gray: #252729;
   --secondary-color: #8a8f98;
   --sidebar: #0e0e10;
-  --brand: #702ec2;
-  --brand-lighter: #d6ccee;
-  --brand-light: #8465cb;
-  --brand-dark: #472a84;
+  --brand: #91a124;
+  --brand-lighter: #c1e1a4;
+  --brand-light: #a1c164;
+  --brand-dark: #91a124;
   --gray1: #222222;
   --error: #ea3323;
 
   --foreground: #fff;
 
   --header-height: 72px;
-  --brand: #91a124;
   --video-list-height: 150px;
 }
 
@@ -355,4 +344,8 @@ input {
 
 .icon-btn:hover {
   background-color: rgba(255, 255, 255, 0.25);
+}
+
+.js-tilt-glare {
+  perspective: 1000px;
 }
