--- a/components/custom-form.module.css
+++ b/components/custom-form.module.css
@@ -14,83 +14,6 @@
  * limitations under the License.
  */
 
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 12px;
-  gap: 12px;
-}
-
-@media (min-width: 1200px) {
-  .form.share-page {
-    justify-content: flex-start;
-  }
-}
-
-.input {
-  border: none;
-  width: 100%;
-  background: transparent;
-  outline: none;
-  height: 56px;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: var(--text-md);
-  color: #fff;
-  font-family: inherit;
-}
-
-@media (min-width: 768px) {
-  .input {
-    width: calc(100% - var(--space-32x));
-    padding-right: 0;
-  }
-}
-
-.input::placeholder {
-  color: var(--secondary-color);
-}
-
-.input-label {
-  background-color: var(--gray);
-  border-radius: var(--space-2x);
-  border: 1px solid transparent;
-  transition: border-color 0.2s ease, background-color 0.2s ease;
-  display: block;
-}
-
-.input-label.focused {
-  background-color: #33373c;
-}
-
-.input-label.error {
-  background: red;
-}
-
-.input-label.success {
-  background: #0070f3;
-}
-
-.input-text {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.form-row {
-  position: relative;
-  max-width: 400px;
-  width: 100%;
-}
-
-@media (min-width: 768px) {
-  .form-row {
-    max-width: 480px;
-  }
-}
-
 .submit {
   width: 100%;
   height: 56px;
@@ -109,12 +32,6 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-}
-
-.submit.generate-with-github {
-  display: flex;
-  margin-bottom: 12px;
-  position: relative;
 }
 
 @media (min-width: 768px) {
@@ -169,39 +86,11 @@
 }
 
 @media (min-width: 1200px) {
-  .form-row {
-    margin: 0;
-  }
-
   .submit.generate-with-github {
     width: 240px;
   }
 }
 
-.stage-btn {
-  background: #323332;
-  border: 2px solid #8465cb;
-}
-
-.github-wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.or-divider {
-  width: 100%;
-  text-align: center;
-  color: var(--secondary-color);
-  margin: var(--space-4x) 0;
-}
-
-@media (min-width: 1200px) {
-  .github-wrapper {
-    flex-direction: row;
-  }
-  .or-divider {
-    width: 240px;
-    margin: 0;
-  }
+.wrapForm {
+  margin-left: var(--space-8x);
 }
